--- a/loopback/docker-compose.yaml
+++ b/loopback/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.8"
 services:
-  mysql:
+  mysqldb :
     image: "mysql"
     volumes:
       - data:/data/db
@@ -8,24 +8,26 @@ services:
       - "3306:3306"
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_ROOT_PASSWORD: "root"
+      MYSQL_DATABASE: "database_name"
+      MYSQL_USER: "mysql"
+      MYSQL_PASSWORD: "root"
   backend:
     build: ./backend
     ports:
-      - "3000:3000"
+      - "3001:3001"
     volumes:
-      - logs:/logs
       - ./backend:/app
       - /app/node_modules
+
     depends_on:
-      - mysql
-    network_mode: "host"
+      - mysqldb
   frontend:
     build: ./frontend
     ports:
-      - "3001:3001"
+      - "3000:3000"
     volumes:
-      - ./frontend/src:/src
+       - ./frontend/src:/app1/src
     stdin_open: true
     tty: true
     depends_on:
@@ -33,4 +35,3 @@ services:
 
 volumes:
   data:
-  logs:
