--- a/loopback/frontend/Dockerfile
+++ b/loopback/frontend/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:15.5.0
+FROM node
 
-WORKDIR /
+WORKDIR /app1
 
 COPY package.json .
 
@@ -8,6 +8,6 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 3001
+EXPOSE 3000
 
 CMD ["npm","start"]
